The parser should accept "1" and "0" as boolean
When mashalling an object ad XML, boolean properties are formatted correctly as "1" and "0".
I think the parser as well should consider "1" as a `Boolean.TRUE`. With this change, both "1" and "true" (case ins.) are parsed as true, and everything else is parsed as false.